# pycpp-proficiency

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  sync_from_notion.py  sync_from_notion_live.py
benchmarks/cpp/: demo.cpp
course_manifest/: manifest.json
lessons/foundations/algorithmic-thinking/: README.md  exercises.md
lessons/foundations/python-primer/: README.md  exercises.md
lessons/foundations/python-primer/python/: concepts.md
lessons/foundations/setup-day-0/: README.md  exercises.md
lessons/week1/day-01/: README.md  exercises.md
lessons/week1/day-02/: README.md  exercises.md
lessons/week1/day-03/: README.md  exercises.md
lessons/week1/day-04/: README.md  exercises.md
lessons/week1/day-05/: README.md  exercises.md
lessons/week1/day-06/: README.md  exercises.md
lessons/week1/day-07/: README.md  exercises.md
lessons/week2/cpp-primer/: README.md  exercises.md
lessons/week2/cpp-primer/cpp/: concepts.md
lessons/week2/day-08/: README.md  exercises.md
lessons/week2/day-09/: README.md  exercises.md
lessons/week2/day-10/: README.md  exercises.md
lessons/week2/day-11/: README.md  exercises.md
lessons/week2/day-12/: README.md  exercises.md
lessons/week2/day-13/: README.md  exercises.md
lessons/week2/day-14/: README.md  exercises.md
lessons/week3/day-15/: README.md
lessons/week3/day-16/: README.md
lessons/week3/day-17/: README.md
lessons/week3/day-18/: README.md
lessons/week3/day-19/: README.md
lessons/week3/day-20/: README.md
scripts/: bootstrap_macos.sh  check.sh  generate_from_manifest.py  sync_from_notion.py
src/cpp_lib/: CMakeLists.txt
src/cpp_lib/include/: numerical.hpp  stats.hpp
src/python_lib/: __init__.py  numerical.py  stats.py  utils.py
tests/cpp/: CMakeLists.txt  test_numerical.cpp  test_stats.cpp
tests/python/: conftest.py  test_numerical.py  test_stats.py
